Update deploy to allow deployment in compartments selected in variables

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
 .idea
 .DS_Store
 __pycache__/
-test.tfvars
+test.*.tfvars
 .terraform*
 .venv
 terraform.tfstate*
 tf.plan
-backend.tf
+.pytest_cache/
